--- a/src/NewsFeed.css
+++ b/src/NewsFeed.css
@@ -19,6 +19,6 @@
 }
 .newsfeed-text {
     color: var(--color-primary-light);
-    font-size: var(--font-size-small);
+    font-size: var(--font-size-verysmall);
 }
 
