--- a/src/CryptoMarketCap.css
+++ b/src/CryptoMarketCap.css
@@ -1,8 +1,8 @@
 .crypto-card {
-    height: 32rem;
-    width: 25rem;
+    height: 32em;
+    width: 25em;
     box-shadow: 0 2rem 4rem rgb(83, 62, 83, 0.5);
-    margin: 1rem;
+    margin: 2rem;
     border-radius: 3px;
     text-align: center;
 }
@@ -15,8 +15,12 @@
 .crypto-header-container {
     background-image: linear-gradient(rgba(158, 135, 158, 0.6), rgb(83, 62, 83, 0.6)), url("https://miro.medium.com/max/2560/1*2cdqBbOJUdvqGVKxAi1JtA.png");
     background-position: top;
-    height: 12rem;
+    height: 16em;
     border-radius: 3px 3px 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .crypto-card-symbol-header {
@@ -24,14 +28,17 @@
     color: white;
     font-size: var(--font-size-medium);
     opacity: .6;
-    padding-top: 4.5rem;
 }
 
 .crypto-card-body {
     padding: 2rem 2rem;
     background-image:linear-gradient(rgba(241, 227, 227, 0.8),rgba(233,233,233,0.9)), url("https://www.verdict.co.uk/wp-content/uploads/2019/01/2019-cryptocurrency-market-1440x1080.jpg");
     background-position: bottom;
-    height: 63%;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 
 }
 .crypto-card-value {
@@ -45,7 +52,7 @@
     width: 11rem;
     margin-top: 2rem;
     text-transform: uppercase;
-    background-color: var(--color-secondary-light);
+    background-color: var(--color-secondary-dark);
     border-radius: 3px;
     border: none;
     cursor: pointer;
