--- a/src/TopCryptoByMarketCap.css
+++ b/src/TopCryptoByMarketCap.css
@@ -8,7 +8,8 @@
 .market-cap-wrapper {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax( 12em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax( 22em, 1fr));
+    grid-gap: 2rem;
 
 
 }
