--- a/src/components/topmarketcap/TopCryptoByMarketCap.css
+++ b/src/components/topmarketcap/TopCryptoByMarketCap.css
@@ -8,8 +8,9 @@
 .market-cap-wrapper {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax( 22em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax( 21em, 1fr));
     grid-gap: 2rem;
+    justify-items: center;
 
 
 }
@@ -25,5 +26,13 @@
 }
 
 @media screen and (max-width: 500px) {
- 
+
+    .market-cap-crypto-container {
+        padding: 3rem 0rem;
+               
+}
+
+    .market-cap-wrapper {
+        grid-gap: 1rem;
+    }
 }
