--- a/src/TopVolume.css
+++ b/src/TopVolume.css
@@ -1,11 +1,41 @@
+.top-volume-card-container {
+    height: 34em;
+    border: 1px solid lightgrey;
+    padding: 3rem 1rem;
+    border-radius: 2px;
+    background-image: linear-gradient();
+    background-color: rgb(248, 246, 246);
+
+}
+
+.top-volume-head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.top-volume-image {
+    width: 33%;
+}
+
 .top-volume-name {
     font-size: var(--font-size-medium);
     color: var(--color-primary-light);
+    text-align: center;
+}
+
+.top-volume-card-wrapper {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .top-volume-details {
     font-size: var(--font-size-small);
-    color: var(--color-primary-dark);
+    color: var(--color-primary-light);
 }
 
 @media screen and (max-width: 500px) {
