--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -76,6 +76,7 @@
         text-transform: uppercase;
         font-size: var(--font-size-big);
         animation: movinLeft;
+        margin: 0 .7em;
     }
 
     
