--- a/src/Form.css
+++ b/src/Form.css
@@ -8,10 +8,10 @@ form {
 }
 
 .Search-Bar {
-    width: 24rem;
+    width: 30rem;
     height: 3.5rem;
     border: none;
-    border-radius: 3px 0px 0px 3px;
+    border-radius: 25px;
     padding: 0 0 0 1rem;
 }
 
@@ -24,6 +24,8 @@ form {
     padding:1rem;
     font-weight: 700;
     cursor: pointer;
+    margin-left: 1em;
+    border-radius: 25px;
 }
 
 .Btn-Search:hover {
