--- a/src/components/cryptoList/Crypto.css
+++ b/src/components/cryptoList/Crypto.css
@@ -2,8 +2,9 @@
 
 .crypto-values-list {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: 10.28% 12.28% 12.28% 16.28% 16.28% 16.28% 16.28%;  
     justify-items: start;
+    margin-left: 4rem;
     
 }
 
@@ -14,7 +15,9 @@
     
 }
 
-
+.percentage-change {
+    color: white;
+}
 
 .bold {
     font-weight: 700;
@@ -30,7 +33,7 @@
     }
 
     .crypto-vales-list {
-        grid-template-columns: 2% 5% 10% 15% 10% 15%;
+        grid-template-columns: 5% 5% 20% 20% 20% 25%;  
         padding: .5rem 0 .5rem 0rem;
     }
     .crypto-value {
