--- a/src/components/news/NewsFeed.css
+++ b/src/components/news/NewsFeed.css
@@ -1,6 +1,6 @@
 
 .newsfeed-item {
-    border: 1px solid rgb(218, 217, 217);
+    border: 1px solid rgb(248, 248, 248);
     border-radius: 5px;
     height: 14rem;
     padding: 2rem;
@@ -15,6 +15,7 @@
 
 .newsfeed-img {
     width: 40%;
+    height: 40%;
     margin-top: .9rem;
 }
 .newsfeed-text {
