--- a/src/components/top-symbols-volumes/TopSymbolsList.css
+++ b/src/components/top-symbols-volumes/TopSymbolsList.css
@@ -1,7 +1,7 @@
 .top-symbols-list-container {
     padding: 3rem 2rem;
     background-color: white;
-    margin-top: 2rem;
+    margin-top: 3rem;
 
 }
 
@@ -10,4 +10,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+@media screen and (max-width: 500px) {
+    .top-symbols-list-container {
+        padding: 0rem 0rem;
+  
+}
 }
