--- a/src/components/topmarketcap/CryptoMarketCap.css
+++ b/src/components/topmarketcap/CryptoMarketCap.css
@@ -3,7 +3,8 @@
     box-shadow: 0 2rem 4rem rgb(83, 62, 83, 0.5);
     border-radius: 3px;
     text-align: center;
-    width: 25em;
+    width: 23em;
+    margin: 2rem;
 }
 
 .crypto-card:hover {
