added react router and search form

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background-image: linear-gradient(135deg, #667eea 0%, #195aae 100%);    
-    padding: 1rem;
+    background-image: linear-gradient(135deg, #666fea 0%, #1965a3 100%);    
+    padding: 2rem;
     position: fixed;
     width: 100%;
 }
