--- a/src/components/cryptoList/CryptoList.css
+++ b/src/components/cryptoList/CryptoList.css
@@ -1,8 +1,37 @@
 
+.form-container {
+    height: 40vh;
+    padding: 10rem;
+    display: flex;
+    justify-content: center;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right, rgba(79, 172, 254, 0.5) 0%, rgba(0, 242, 254, .7) 100%), 
+    url("https://www.ledger.com/wp-content/uploads/2019/04/blogpost-crypto-secure.png");
+}
+
+
+input {
+    border: none;
+    padding: 1.7rem;
+    width: 30rem;
+    border-radius: 5px;
+}
+
+.form-text {
+    margin-top: 2rem;
+    color: white;
+    font-size: var(--font-size-medium);
+}
+
 .market-prices__header-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 2rem;
+    margin-top: 3rem;
 }
 .crypto-market-header {
     color: rgb(83, 62, 83);
@@ -10,8 +39,9 @@
     
 }
 
-.list-container {
-    min-height: 100vh;
+.value-link {
+    color: rgb(29, 102, 197);
+    cursor: pointer;
 }
 
 .list-container, 
@@ -32,13 +62,14 @@
 
 .list-values {
     display: grid;
-    grid-template-columns: 10.28% 12.28% 12.28% 16.28% 16.28% 16.28% 16.28%;  
+    grid-template-columns: 10.28% 12.78% 12.18% 16.08% 16.28% 16.28% 16.28%;  
     list-style: none;
     justify-items: start;
     font-weight: 700;
     font-size: var(--font-size-small);
     color: rgb(83, 62, 83);
-    margin-left: 4rem;
+    padding-left: 5rem;
+    margin-top: 4rem;
 
 
     
