--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@
 .Header {
 
     text-align: center;
-    padding: 8rem 2rem;
+    padding: 5rem 2rem;
     height: 70vh;
     background-image: linear-gradient(to right, rgba(79, 172, 254, 0.5) 0%, rgba(0, 242, 254, .7) 100%), 
     url("https://www.ledger.com/wp-content/uploads/2019/04/blogpost-crypto-secure.png");
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
   }
 
