--- a/src/components/news/NewsList.css
+++ b/src/components/news/NewsList.css
@@ -1,6 +1,6 @@
 .news-list-container {
-    background-color: white;
-    padding: 4rem 3em;
+    background-color: rgb(245, 238, 238);
+    padding: 4rem 7em;
 }
 
 .news-header {
@@ -8,14 +8,16 @@
 }
 .news-list-wrapper {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     margin-top: 4rem;
+    grid-gap: 1rem;
 }
+
 .test-content-paragraph {
     font-size: var(--font-size-medium);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
 
     .news-list-container {
         padding: 3em 0;
@@ -25,8 +27,16 @@
    } 
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
     .news-list-wrapper {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(3, 1fr);
+
+    } 
+ }
+
+ @media screen and (max-width: 500px) {
+    .news-list-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+
     } 
  }
