--- a/src/components/top-symbols-volumes/TopSymbolsList.css
+++ b/src/components/top-symbols-volumes/TopSymbolsList.css
@@ -8,8 +8,8 @@
 .top-symbols-list-wrapper {
     margin-top: 3rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 @media screen and (max-width: 500px) {
