changed apis for market data, created exchange and wallet pageswith apis, adjusted responsivness and router

--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,8 @@ body {
 
 
 .App {
-  background-image: linear-gradient(to right, 
-  rgba(79, 172, 254, 1) 0%, rgba(0, 242, 254, 1) 100%);
+  /* background-image: linear-gradient(to right, 
+  rgba(79, 172, 254, 1) 0%, rgba(0, 242, 254, 1) 100%); */
   min-height: 100%;
   overflow: hidden;
 
