--- a/src/assets/style/news.css
+++ b/src/assets/style/news.css
@@ -23,12 +23,14 @@
 
 .news-header {
     font-size: var(--font-size-medium);
-    margin-top: 1.8rem;
-}
+    margin-top: 2rem;
+    text-decoration: underline;
+    color: var(--color-secondary-dark)
+;}
 .news-item-paragraph {
     font-size: var(--font-size-small);
     line-height: 1.3;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .categories {
@@ -61,10 +63,10 @@
 @media screen and (max-width: 500px) {
 
     .news-item__left img {
-        width: 10em;
-        height: 10em;
+        width: 24em;
+        height: 24em;
     }
-    .news-item__hide-mobile {
+    /* .news-item__hide-mobile {
         display: none;
-    }
+    } */
 }
