--- a/src/assets/style/newsheader.css
+++ b/src/assets/style/newsheader.css
@@ -65,6 +65,13 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .btn-learn-more {
+        width: 14rem;
+    }
+
+}
+
 @media screen and (max-width: 500px) {
     .news-header__container {
         grid-template-columns: 1fr;
@@ -77,7 +84,11 @@
     }
 
     .news-header__right {
-        height: 30vh;
+        height: 40vh;
+    }
+
+    .btn-learn-more {
+        width: 17rem;
     }
 
     
