--- a/src/assets/style/newslist.css
+++ b/src/assets/style/newslist.css
@@ -8,7 +8,7 @@
 }
 .news-list-wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     margin-top: 4rem;
     grid-gap: 1rem;
 }
@@ -20,7 +20,7 @@
 @media screen and (max-width: 1024px) {
 
     .news-list-container {
-        padding: 3em 0;
+        padding: 3em 3em;
     }
    .news-list-wrapper {
        grid-template-columns: repeat(4, 1fr);
@@ -29,14 +29,17 @@
 
 @media screen and (max-width: 768px) {
     .news-list-wrapper {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr;
+        justify-items: center;
+
 
     } 
  }
 
  @media screen and (max-width: 500px) {
     .news-list-wrapper {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr;
+        padding: 2rem 2rem;
 
     } 
  }
