--- a/src/components/top-symbols-volumes/TopVolumeList.css
+++ b/src/components/top-symbols-volumes/TopVolumeList.css
@@ -21,5 +21,12 @@
     }
 }
 
+@media screen and (max-width: 320px) {
+    .top-volume-container {
+        padding: 5rem 2rem;
+     
+    }
+}
+
 
 
