--- a/src/assets/style/Home.css
+++ b/src/assets/style/Home.css
@@ -40,4 +40,10 @@
       transform: rotate(360deg);
     }
   }
+
+  .view-all {
+    margin-top: 2rem;
+    margin-left: 3rem;
+    font-size: var(--font-size-medium);
+  }
   
