--- a/src/assets/style/walletlist.css
+++ b/src/assets/style/walletlist.css
@@ -6,4 +6,34 @@
     margin-top: 5rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    justify-items: stretch;
+}
+
+@media screen and (max-width: 1024px) {
+    .wallets-container {
+        padding: 2rem 1rem;
+    }
+
+    .wallets-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+   
+    .wallets-wrapper {
+        grid-template-columns: repeat(3, 1fr);
+        
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .wallets-container {
+        padding: 2rem 2rem;
+    }
+
+    .wallets-wrapper {
+        grid-template-columns: 1fr;
+  
+    }
 }
