adjusted responsivness, navbar functionality tbf further, added top performers and top exchanges

--- a/src/assets/style/TopVolumeList.css
+++ b/src/assets/style/TopVolumeList.css
@@ -16,6 +16,10 @@
 }
 
 @media screen and (max-width: 500px) {
+    .top-volume-container {
+        padding: 5rem 0;
+        margin-top: 2rem;
+    }
     .top-volume-wrapper {
         grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
     }
