--- a/src/assets/style/exchangesitem.css
+++ b/src/assets/style/exchangesitem.css
@@ -4,6 +4,7 @@
     padding: 2rem 3rem;
     /* background-color: var(--color-secondary-dark); */
     background-color: var(--color-secondary-light-hover);
+    background-color: slateblue;
     line-height: 1.7;
 }
 
