--- a/src/assets/style/navbar.css
+++ b/src/assets/style/navbar.css
@@ -55,6 +55,7 @@
         right: 3%;
         color: white;
         z-index: 5;
+        cursor: pointer;
     }
 
     .exit {
@@ -75,14 +76,13 @@
         -webkit-clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
         clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
         transition: all ease-in-out .1s;
-        opacity: .85;
+        opacity: .95;
         
     }
 
     .navbar-link {
         text-transform: uppercase;
         font-size: var(--font-size-mediumbig);
-        animation: movinLeft;
         margin: 0 .7em;
     }
 
@@ -96,5 +96,9 @@
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
         
+    }
+
+    .navbar-links.close {
+        display: none;
     }
 }
