--- a/src/assets/style/viewcrypto.css
+++ b/src/assets/style/viewcrypto.css
@@ -116,7 +116,7 @@
 @media screen and (max-width: 500px) {
 
     .view-crypto__background {
-        padding: 0 .5rem;
+        padding: 3rem .5rem;
         
     }
     .view-crypto__container {
